add documentation for get_options, get_option
Signed-off-by: Sharad Singhal <sharad.singhal@hpe.com>

--- a/fam_list_options.html
+++ b/fam_list_options.html
@@ -88,7 +88,54 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_list_options</h1>
+	<p>Get the list of names for pre-defined names in the FAM library.</p>
+	<h2>Synopsis</h2>
+	<p class="code">const char **fam_list_options(void);</p>
+	<h2>Description</h2>
+	<p>This method can be used to retrieve the names of global
+		variables used within OpenFAM or set using the options argument to
+		<code>fam_initialize()</code>. The list is implementation specific.</p>
+	<h2>Input Arguments</h2>
+	<p>None.</p>
+	<h2>Return Values</h2>
+	<p>A null terminated list of names that can be used to retrieve
+		option values.</p>
+	<h2>Example</h2>
+<pre>
+	#include &lt;stdlib.h>
+	#include &lt;stdio.h>
+	#include &lt;string.h>
+	#include &lt;fam/fam.h>
+	#include &lt;fam/fam_exception.h>
+	using namespace openfam;
+	using namespace std;
+	 
+	int main(void) {
+	        fam *myFam = new fam();
+	        Fam_Options *fm = (Fam_Options*)malloc(sizeof(Fam_Options));
+	        memset((void *)fm, 0, sizeof(Fam_Options));
+	        // assume that no specific options are needed by the implementation
+	        try {
+	               myFam->fam_initialize("myApplication", fm);
+	               printf("FAM initialized\n");
+	        } catch (Fam_Exception&amp; e) {
+	               printf("FAM Initialization failed: %s\n", e.fam_error_msg());
+	               myFam->fam_abort(-1); // abort the program
+	               // note that fam_abort currently returns after signaling
+	               // so we must terminate with the same value
+	         	return -1;
+	        }
+	 
+	        const char **optionName = myFam->fam_list_options();
+	        while(*optionName != NULL){     // while we have more names
+	               printf("%s\n", *optionName);    // print the name
+	               optionName++;
+	        }
+	        myFam->fam_finalize("myApplication");
+	        printf("FAM finalized\n");
+	}
+</pre>
 		</article>
 	</section>
 	<footer>
