--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -88,7 +88,243 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_get_option</h1>
+	<p>Get the value for a pre-defined option in the FAM library.</p>
+	<h2>Synopsis</h2>
+	<p>const void *fam_get_option(char *optionName);</p>
+	<h2>Description</h2>
+	<p>This method can be used to retrieve values of state variables
+		maintained within OpenFAM or set using the options argument to
+		<code>fam_initialize()</code>. The supported names (and returned types) are
+		implementation specific.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th></tr>
+			<tr><td class="code">optionName</td><td>Name of the option to be retrieved.</td></tr>
+		</tbody>
+	</table>
+	The following optionNames are available:
+	<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th><th>Return type</th><th>Default Value</th></tr>
+			<tr><td class="code">&quot;VERSION&quot;</td>
+				<td>Version of the current implementation of the OpenFAM API.</td>
+				<td class="code">char*</td>
+				<td class="code">&quot;0.0.1&quot;</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;DEFAULT_REGION_NAME&quot;
+				</td>
+				<td>
+					The default Region name used with in the program.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;default&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;MEMORY_SERVER&quot;
+				</td>
+				<td>
+					Memory server set by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;0:127.0.0.1&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;GRPC_PORT&quot;
+				</td>
+				<td>
+					Grpc port used by memory server allocator.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;8787&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;LIBFABRIC_PORT&quot;
+				</td>
+				<td>
+					Port used for libfabric operations in memory server
+						allocator
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;7500&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;LIBFABRIC_PROVIDER&quot;
+				</td>
+				<td>
+					Libfabric provider type set by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;sockets&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;FAM_THREAD_MODEL&quot;
+				</td>
+				<td>
+					Thread model used by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;FAM_THREAD_SERIALIZE&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;ALLOCATOR&quot;
+				</td>
+				<td>
+					Allocator type used by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;grpc&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;FAM_CONTEXT_MODEL&quot;
+				</td>
+				<td>
+					Fam context model used by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;FAM_CONTEXT_DEFAULT&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;PE_COUNT&quot;
+				</td>
+				<td>
+					Number of PEs running the application program.
+				</td>
+				<td class="code">
+					int*
+				</td>
+				<td class="code">
+					1
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;PE_ID&quot;
+				</td>
+				<td>
+					PE id of the current program.
+				</td>
+				<td class="code">
+					int*
+				</td>
+				<td class="code">
+					0
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;RUNTIME&quot;
+				</td>
+				<td>
+					Runtime environment used by the application.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;PMIX&quot;
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					&quot;NUM_CONSUMER&quot;
+				</td>
+				<td>
+					Number of consumer threads running in shared memory
+						allocator.
+				</td>
+				<td class="code">
+					char*
+				</td>
+				<td class="code">
+					&quot;1&quot;
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<p>&nbsp;</p>
+	<p>Note: The following options are not supported in current
+		implementation and should not be used. It return the default values.
+		<code>&quot;DEFAULT_REGION_NAME&quot;</code>, <code>&quot;FAM_THREAD_MODEL&quot;</code> and <code>&quot;FAM_CONTEXT_MODEL&quot;</code></p>
+	<h2>Return Values</h2>
+	<p>A pointer to the value of the option. Throws an exception on
+		error.</p>
+	<h2>Exceptions</h2>
+	<p><code>Fam_InvaidOption_Exception</code> if <code>optionName</code> not found.</p>
+	<h2>Notes</h2>
+	<p>None.</p>
+	<h2>Example</h2>
+<pre>
+	#include &lt;stdlib.h>
+	#include &lt;stdio.h>
+	#include &lt;string.h>
+	#include &lt;fam/fam.h>
+	#include &lt;fam/fam_exception.h>
+	using namespace std;
+	using namespace openfam;
+	 
+	int main(void) {
+	        fam *myFam = new fam(); 
+	 
+	        // ... initialization code here
+	 
+	        try {
+	               // assumes that library version is one of the supported options
+	               const char * libraryVersion = (const char *)myFam->fam_get_option(strdup("VERSION"));
+	               printf("%s\n", libraryVersion);
+	        } catch (Fam_Exception&amp; e) {
+	               printf("FAM API failed: %s\n", e.fam_error_msg());
+	               myFam->fam_abort(-1); // abort the program
+	               // note that fam_abort currently returns after signaling
+	               // so we must terminate with the same value
+	               return -1;
+	        }
+	       // ... finalization code here
+	}
+</pre>
 		</article>
 	</section>
 	<footer>
