update cross-references in get_option, list_option
Signed-off-by: Sharad Singhal <sharad.singhal@hpe.com>

--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -105,7 +105,7 @@
 		</tbody>
 	</table>
 	The following optionNames are available:
-	<table>
+	<table id="e1">
 		<tbody>
 			<tr><th>Name</th><th>Description</th><th>Return type</th><th>Default Value</th></tr>
 			<tr><td class="code">&quot;VERSION&quot;</td>
