--- a/fam_list_options.html
+++ b/fam_list_options.html
@@ -99,7 +99,7 @@
 	<h2>Input Arguments</h2>
 	<p>None.</p>
 	<h2>Return Values</h2>
-	<p>A null terminated list of names that can be used to retrieve
+	<p>A null terminated <a href="fam_get_option.html#e1">list of names</a> that can be used to retrieve
 		option values.</p>
 	<h2>Example</h2>
 <pre>
