--- a/fam_lookup.html
+++ b/fam_lookup.html
@@ -88,7 +88,64 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_lookup</h1>
+	<p>Look up a descriptor to a region or data item in the metadata
+		service.</p>
+	<h2>Synopsis</h2>
+	<p class="code">Fam_Region_Descriptor *fam_lookup_region(char *regionName);</p>
+	<p class="code">Fam_Descriptor *fam_lookup(char *itemName, char *regionName);</p>
+	<h2>Description</h2>
+	<p>These methods look up a descriptor registered with the metadata
+		service using its name.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th></tr>
+			<tr><td class="code">itemName</td><td>Name of the data item to be looked up.</td></tr>
+			<tr><td class="code">regionName</td><td>Name of the region, or region containing the item.</td></tr>
+		</tbody>
+	</table>
+	<h2>Return Values</h2>
+	<p>A descriptor to the value in FAM. Throws an exception on error.</p>
+	<h2>Exceptions</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td>FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
+	<tr><td>FAM_ERR_NOTFOUND</td><td>the item or region name was not found by the metadata service.</td></tr>
+	<tr><td>FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td>FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	</tbody>
+	</table>
+	<h2>Notes</h2>
+	<p>See the <code><a href="fam_create_region.html">fam_create_region()</a></code> and <code><a href="fam_allocate.html">fam_allocate()</a></code> APIs for discussion of regions and data items.</p>
+	<h2>Example</h2>
+<pre>
+	#include &lt;stdlib.h>
+	#include &lt;stdio.h>
+	#include &lt;string.h>
+	#include &lt;fam/fam.h>
+	#include &lt;fam/fam_exception.h>
+	using namespace std;
+	using namespace openfam;
+	 
+	int main(void) {
+	        fam *myFam = new fam();
+	 
+	       // ... initialization code here
+	 
+	        try {
+	               // get a region descriptor from the metadata service
+	               Fam_Region_Descriptor *region = myFam->fam_lookup_region("myRegion");
+	 
+	               // Get a descriptor (created by another PE) via the metadata service
+	               Fam_Descriptor *arrayDescriptor = myFam->fam_lookup("myArray", "myOtherRegion");
+	        } catch (Fam_Allocator_Exception &amp;e) {
+	               printf("Look up failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	        }
+	        // ... continuation code here
+	}
+</pre>
 		</article>
 	</section>
 	<footer>
