--- a/fam_create_region.html
+++ b/fam_create_region.html
@@ -88,7 +88,110 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+		<h1 class="code">openfam::fam::fam_create_region</h1>
+	<p>Create a new region in FAM.</p>
+	<h2>Synopsis</h2>
+	<p class="code">Fam_Region_Descriptor *fam_create_region(char *name, uint64_t
+		size, mode_t permissions, Fam_Redundancy_Level redundancyLevel, ...);</p>
+	<h2>Description</h2>
+	<p>This method creates a region in FAM for subsequent use</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr>
+				<th>
+					Name
+				</th>
+				<th>
+					Description
+				</th>
+			</tr>
+			<tr>
+				<td class="code">
+					Name
+				</td>
+				<td>
+					Name of the region to be created.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					Size
+				</td>
+				<td>
+					Requested size of the region in bytes.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					permissions
+				</td>
+				<td>
+					Permissions to be associated with this region.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					redundancyLevel
+				</td>
+				<td>
+					Desired redundancy level.
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<p>&nbsp;</p>
+	<h2>Return Values</h2>
+	<p>Descriptor to the created region. Throws an exception on error.</p>
+	<h2>Exceptions</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the region name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>there is a communication error with memoryserver</td></tr>
+	</tbody></table>
+	<h2>Notes</h2>
+	<p>Note that the system may round up the actual size of the region
+		to align memory boundaries. Currently the maximum size of a region is
+		limited to 16 EiB by the API.</p>
+	<h2>Example</h2>
+<pre>
+#include &lt;stdlib.h>
+#include &lt;stdio.h>
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+
+	fam *myFam = new fam();
+	
+	// .. initialization code here
+	
+	try {
+		// create a 10 GB region with 0777 permissions and RAID5 redundancy
+		Fam_Region_Descriptor *rd = myFam->fam_create_region("myRegion", (uint64_t)10000000000, 0777, RAID5);
+		
+		/ use the created region...
+		printf("fam_create_region successfull\n");
+		
+		// ... continuation code here
+		
+		// we are finished. Destroy the region and everything in it
+		myFam->fam_destroy_region(rd);
+		printf("fam_destroy_region successfull\n");
+	} catch (Fam_Allocator_Exception &amp;e) {
+		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg()); 
+	}
+	
+	// ... finalization code here
+	
+}
+</pre>
 		</article>
 	</section>
 	<footer>
