--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -91,7 +91,7 @@
 			<h1 class="code">openfam::fam::fam_get_option</h1>
 	<p>Get the value for a pre-defined option in the FAM library.</p>
 	<h2>Synopsis</h2>
-	<p>const void *fam_get_option(char *optionName);</p>
+	<p class="code">const void *fam_get_option(char *optionName);</p>
 	<h2>Description</h2>
 	<p>This method can be used to retrieve values of state variables
 		maintained within OpenFAM or set using the options argument to
@@ -298,32 +298,32 @@
 	<p>None.</p>
 	<h2>Example</h2>
 <pre>
-	#include &lt;stdlib.h>
-	#include &lt;stdio.h>
-	#include &lt;string.h>
-	#include &lt;fam/fam.h>
-	#include &lt;fam/fam_exception.h>
-	using namespace std;
-	using namespace openfam;
-	 
-	int main(void) {
-	        fam *myFam = new fam(); 
-	 
-	        // ... initialization code here
-	 
-	        try {
-	               // assumes that library version is one of the supported options
-	               const char * libraryVersion = (const char *)myFam->fam_get_option(strdup("VERSION"));
-	               printf("%s\n", libraryVersion);
-	        } catch (Fam_Exception&amp; e) {
-	               printf("FAM API failed: %s\n", e.fam_error_msg());
-	               myFam->fam_abort(-1); // abort the program
-	               // note that fam_abort currently returns after signaling
-	               // so we must terminate with the same value
-	               return -1;
-	        }
-	       // ... finalization code here
+#include &lt;stdlib.h>
+#include &lt;stdio.h>
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam(); 
+	
+	// ... initialization code here
+	
+	try {
+		// assume that library version is one of the supported options
+		const char * libraryVersion = (const char *)myFam->fam_get_option(strdup("VERSION"));
+		printf("%s\n", libraryVersion);
+	} catch (Fam_Exception&amp; e) {
+		printf("FAM API failed: %s\n", e.fam_error_msg());
+		myFam->fam_abort(-1); // abort the program
+		return -1;
 	}
+	
+	// ... finalization code here
+
+}
 </pre>
 		</article>
 	</section>
