--- a/fam_lookup.html
+++ b/fam_lookup.html
@@ -111,10 +111,10 @@
 	<table>
 	<tbody>
 	<tr><th>Exception</th><th>Description</th></tr>
-	<tr><td>FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
-	<tr><td>FAM_ERR_NOTFOUND</td><td>the item or region name was not found by the metadata service.</td></tr>
-	<tr><td>FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
-	<tr><td>FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
+	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>the item or region name was not found by the metadata service.</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
 	</tbody>
 	</table>
 	<h2>Notes</h2>
