--- a/fam_allocate.html
+++ b/fam_allocate.html
@@ -88,7 +88,80 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_allocate</h1>
+	<p>Allocate a data item in a region of FAM.</p>
+	<h2>Synopsis</h2>
+	<p class="code">
+		Fam_Descriptor *fam_allocate(char *name, uint64_t nbytes, mode_t
+		accessPermissions, Fam_Region_Descriptor *region);<br>
+		Fam_Descriptor *fam_allocate(uint64_t nbytes, mode_t
+		accessPermissions, Fam_Region_Descriptor *region);
+	</p>
+	<h2>Description</h2>
+	<p>These methods allocate space for a data item in some region of
+		FAM.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th></tr>
+			<tr><td class="code">name</td><td>Name of the data item for subsequent references.</td></tr>
+			<tr><td class="code">nbytes</td><td>Requested size of the data item in bytes.</td></tr>
+			<tr><td class="code">accessPermissions</td><td>Access permissions for this data item.</td></tr>
+			<tr><td class="code">region</td><td>
+					Descriptor for the region where the data item is being
+						created. If null, the default specified during fam_initialize() is
+						used.</td></tr>
+		</tbody>
+	</table>
+	<p>&nbsp;</p>
+	<h2>Return Values</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	</tbody>
+	</table>
+	<h2>Notes</h2>
+	<p>Note that these methods may allocate space greater than the
+		requested size to maintain an implementation dependent byte alignment.
+		The allocated space is zeroed out during allocation. If a name is
+		provided during allocation, it can be used within subsequent calls to
+		fam_lookup() to retrieve the associated descriptor. If a name is not
+		provided during allocation, then the program itself is responsible for
+		saving and tracking the descriptor if required later, since the data
+		in FAM will be unreachable without the descriptor.</p>
+	<h2 id="e1">Example</h2>
+<pre>
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam();
+	// ... Initialization code here
+
+	try {
+		Fam_Region_Descriptor *region = myFam->fam_lookup_region("myRegion");
+		// create 50 element unnamed integer array in FAM with 0600
+		// (read/write by owner) permissions in myRegion
+		Fam_Descriptor *descriptor = myFam->fam_allocate((uint64_t)(50 * sizeof(int)), 0600, region);
+
+		printf("Successully allocated 50 unnamed integer elements\n");
+
+		// free allocated space in FAM
+		myFam->fam_deallocate(descriptor);
+		printf("Successully de-allocated 50 unnamed integer elements\n");
+	} catch (Fam_Exception &amp;e) {
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	 }
+	 // ... Finalization code here
+}
+</pre>
 		</article>
 	</section>
 	<footer>
