--- a/fam_create_region.html
+++ b/fam_create_region.html
@@ -149,14 +149,14 @@
 	<tr><th>Exception</th><th>Description</th></tr>
 	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
 	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the region name is already present in FAM</td></tr>
-	<tr><td class="code">FAM_ERR_GRPC</td><td>Memory server initialization failure</td></tr>
-	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>there is a communication error with memoryserver</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memoryserver</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
 	</tbody></table>
 	<h2>Notes</h2>
 	<p>Note that the system may round up the actual size of the region
 		to align memory boundaries. Currently the maximum size of a region is
 		limited to 16 EiB by the API.</p>
-	<h2>Example</h2>
+	<h2 id="e1">Example</h2>
 <pre>
 #include &lt;stdlib.h>
 #include &lt;stdio.h>
