--- a/fam_deallocate.html
+++ b/fam_deallocate.html
@@ -88,7 +88,41 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_deallocate</h1>
+	<p>Deallocate space being used by a data item in a region of FAM.</p>
+	<h2>Synopsis</h2>
+	<p class="code">void fam_deallocate(Fam_Descriptor *descriptor);</p>
+	<h2>Description</h2>
+	<p>This method triggers a deallocation of previously allocated
+		space for a data item in some region of FAM.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr><td>Name</td><td>Description</td></tr>
+			<tr><td>Descriptor</td><td>Descriptor associated with the space to deallocate.</td></tr>
+		</tbody>
+	</table>
+	<p>&nbsp;</p>
+	<h2>Return Values</h2>
+	<p>None. Throws an exception on error.</p>
+	<h2>Exceptions</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	</tbody>
+	</table>
+	<h2>Notes</h2>
+	<p>Note that if a descriptor is used to access deallocated space,
+		behaviour of the library is implementation dependent. The
+		implementation may reclaim space some indeterminate amount of time
+		after the method is called, to permit other PEs currently using the
+		data item to finish.</p>
+	<h2>Example</h2>
+	<p>See <a href="fam_allocate.html#e1">fam_allocate</a></p>
 		</article>
 	</section>
 	<footer>
