--- a/fam_get.html
+++ b/fam_get.html
@@ -88,7 +88,160 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_get</h1>
+	<p>Copy a segment of memory from FAM to local memory.</p>
+	<h2>Synopsis</h2>
+	<p class="code">int fam_get_blocking(void *local, Fam_Descriptor *descriptor,
+		uint64_t offset, uint64_t nbytes);</p>
+	<p class="code">void fam_get_nonblocking(void *local, Fam_Descriptor
+		*descriptor, uint64_t offset, uint64_t nbytes);</p>
+	<h2>Description</h2>
+	<p>Copy (part of) some data item from FAM to local memory.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th></tr>
+			<tr>
+				<td class="code">
+					Local
+				</td>
+				<td>
+					Appropriately sized area of local memory to receive data.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					Descriptor
+				</td>
+				<td>
+					Descriptor associated with the data item in FAM.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					Offset
+				</td>
+				<td>
+					Byte offset from the start of the data item in FAM.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					nbytes
+				</td>
+				<td>
+					Number of bytes to copy from FAM to local memory.
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<h2>Return Values</h2>
+	<p>The non-blocking call does not return a value on Sucess. The
+		blocking call returns an integer value following normal C convention
+		of 0 for successful completion. Both non-blocking and blocking call
+		throw an exception on error.</p>
+	<h2>Exceptions</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
+	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during read operation
+		over fabric.</td></tr>
+	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during read operationover fabric.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
+	<tr><td class="code">Fam_Timeout_Exception</td><td>number of libfabric retry count reached the timeout limit.
+	(Only for blocking call)</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	</tbody>
+	</table>
+	<h2 id="e1">Notes</h2>
+	<p>The local memory pointer must point to an area of memory
+		sufficient to accommodate the incoming data (nbytes). Insufficient
+		allocation of local memory may cause segmentation violations or
+		corrupted data in local memory.</p>
+	<p>At return, the memory pointed to by local contains a copy of the
+		data in FAM for the blocking call. For the non-blocking call, the
+		memory pointed to by the local pointer is not guaranteed to contain a
+		copy of the data in FAM until after a successful completion of a
+		fam_quiet() call.</p>
+	<h2>Examples</h2>
+<pre>
+// Example of blocking get
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam();
+
+	// ... Initialization code here
+
+	try {
+		// look up the descriptor to a previously allocated data item
+		// (a 50 element integer array)
+
+		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
+	
+		// allocate local memory to receive 10 elements
+		int *local = (int *)malloc(10 * sizeof(int));
+	
+		// copy elements 6-15 from FAM into elements 0-9 in local memory
+		myFam->fam_get_blocking(local, descriptor, 6*sizeof(int), 10*sizeof(int));
+	
+		// ... we now have a copy in local memory to work with
+		printf("fam_get_blocking success. Data now in local memory\n");
+	 } catch (Fam_Exception &amp;e) {
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	 }
+	 // ... Finalization code
+}
+	
+// Example of non-blocking get
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam();
+	
+	// ... Initialization code here
+	 try {
+	 	// look up the descriptor to a previously allocated data item
+		// (a 50 element integer array)
+		Fam_Descriptor *descriptor1 = myFam->fam_lookup("myItem", "myRegion");
+
+		// allocate local memory to receive 10 elements from different offsets
+		// within the data item
+		int *local1 = (int *) malloc(10 * sizeof(int));
+		int *local2 = (int *) malloc(10 * sizeof(int));
+		// copy elements 6-15 from FAM into local1 elements 0-9 in local memory
+	
+		myFam->fam_get_nonblocking(local1, descriptor1, 6*sizeof(int), 10*sizeof(int));
+		// copy elements 26-35 from FAM into local2 elements 0-9 in local memory
+	
+		myFam->fam_get_nonblocking(local2, descriptor1, 26*sizeof(int), 10*sizeof(int));
+
+		// wait for previously issued non-blocking operations to complete
+		myFam->fam_quiet();
+
+		// ... we now have copies in local memory to work with
+
+		printf("fam_get_nonblocking success. All copies of data now in local
+		memory\n");
+	 } catch (Fam_Exception &amp;e) {
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	 }
+
+	 // ... Finalization code follows
+}
+</pre>
 		</article>
 	</section>
 	<footer>
