--- a/fam_scatter.html
+++ b/fam_scatter.html
@@ -88,7 +88,163 @@
 			<hr>
 		</nav>
 		<article>
-			<h1>This page is currently under construction</h1>
+			<h1 class="code">openfam::fam::fam_scatter</h1>
+	<p>Copy elements of a data item from local memory to disjoint parts
+		of FAM.</p>
+	<h2>Synopsis</h2>
+	<p class="code">int fam_scatter_blocking(void *local, Fam_Descriptor
+		*descriptor, uint64_t nElements, uint64_t firstElement, uint64_t
+		stride, uint64_t elementSize);</p>
+	<p class="code">int fam_scatter_blocking(void *local, Fam_Descriptor
+		*descriptor, uint64_t nElements, uint64_t *elementIndex, uint64_t
+		elementSize);</p>
+	<p class="code">void fam_scatter_nonblocking(void *local, Fam_Descriptor
+		*descriptor, uint64_t nElements, uint64_t firstElement, uint64_t
+		stride, uint64_t elementSize);</p>
+	<p class="code">void fam_scatter_nonblocking(void *local, Fam_Descriptor
+		*descriptor, uint64_t nElements, uint64_t *elementIndex, uint64_t
+		elementSize);</p>
+	<h2>Description</h2>
+	<p>Copy elements of a data item from local memory to FAM based on a
+		constant or indexed stride.</p>
+	<h2>Input Arguments</h2>
+	<table>
+		<tbody>
+			<tr>
+				<th>
+					Name
+				</th>
+				<th>
+					Description		</th>
+			</tr>
+			<tr>
+				<td class="code">
+					Local
+				</td>
+				<td>
+					Pointer to appropriately sized area of local memory.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					descriptor
+				</td>
+				<td>
+					Descriptor associated with the data item in FAM.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					nElements
+				</td>
+				<td>
+					Number of elements to put.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					firstElement
+				</td>
+				<td>
+					Index (in FAM) of the first element within the data item to
+						put.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					elementIndex
+				</td>
+				<td>
+					A local array containing element indexes in FAM.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					Stride
+				</td>
+				<td>
+					Stride to use when putting elements.
+				</td>
+			</tr>
+			<tr>
+				<td class="code">
+					elementSize
+				</td>
+				<td>
+					Size of each element to scatter.
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<h2>Return Values</h2>
+	<p>The non-blocking calls do not return a value on success. The
+		blocking calls return an integer value following normal C convention
+		of 0 for successful completion. At return, FAM contains a copy of the
+		data elements for the blocking calls. Data in FAM is not guaranteed
+		until successful completion of a subsequent fam_quiet() call for the
+		non-blocking calls. Both non-blocking and blocking call throws an
+		exception on error.</p>
+	<h2>Exceptions</h2>
+	<table>
+	<tbody>
+	<tr><th>Exception</th><th>Description</th></tr>
+	<tr><td class="code">Fam_InvalidOption_Exception</td><td>incorrect parameters are passed.</td></tr>
+	<tr><td class="code">Fam_Datapath_Exception</td><td>error occurred during write operation
+		over fabric.</td></tr>
+	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>libfabric error occurred.</td></tr>
+	<tr><td class="code">Fam_Timeout_Exception</td><td>number of libfabric retry count reached the timeout limit.
+	(Only for blocking call)</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
+	<tr><td class="code">FAM_ERR_ALREADYEXIST</td><td>the data item name is already present in FAM</td></tr>
+	<tr><td class="code">FAM_ERR_GRPC</td><td>there is a communication error with memory server</td></tr>
+	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>Memory server initialization failure</td></tr>
+	</tbody>
+	</table>
+	<h2>Notes</h2>
+	<p>This API assumes that the data item contains uniformly sized
+		elements (e.g, a large array). Currently, the API scatters
+		elements within a single data item. Note that two versions of each API
+		exist: a strided gather/scatter that assumes a constant stride and an
+		indexed gather/scatter that uses an index array to gather/scatter the
+		elements.</p>
+	<h2>Example</h2>
+<pre>	
+#include &lt;string.h>
+#include &lt;fam/fam.h>
+#include &lt;fam/fam_exception.h>
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam();
+
+	// ... Initialization code here
+
+	try {
+		// look up the descriptor to a previously allocated data item
+		// (a 50-element integer array)
+		Fam_Descriptor *descriptor = myFam->fam_lookup("myItem", "myRegion");
+	
+		// local data
+		int local[] = {0,1,2,3,4};
+	
+		// scatter the data into myItem[1,3,5,7,9]
+		myFam->fam_scatter_blocking(local, descriptor, 5L, (uint64_t) 1, 2, sizeof(int));
+	
+		// in addition, place them in myItem[10,17,13,15,16] respectively
+		uint64_t indexes[] = {10, 17, 13, 15, 16};
+		
+		myFam->fam_scatter_blocking(local, descriptor, 5L, indexes, sizeof(int));
+	
+		// ... we now have the correct elements in FAM
+		printf("fam_scatter successfull. Correct elements are now in FAM.\n");
+	 } catch (Fam_Exception &amp;e) {
+		printf("fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	 }
+	
+	 // ... Finalization code follows
+}
+</pre>
 		</article>
 	</section>
 	<footer>
